fix: center align deleting listing

--- a/src/app/modules/deleted-notes-list/deleted-notes-list.component.scss
+++ b/src/app/modules/deleted-notes-list/deleted-notes-list.component.scss
@@ -6,6 +6,7 @@
   height: 100%;
   overflow-y: scroll;
   width: 100%;
+  align-items: center;
 
   .no-notes {
     display: flex;
